# sam-kit

./: .gitignore  README.md  test.txt
ceres-solver-1.11.0/: CMakeLists.txt
ceres-solver-1.11.0/examples/: CMakeLists.txt  accidental_motion_error.h  bal_problem.cc  bal_problem.h  bundle_adjuster.cc
ceres-solver-1.11.0/internal/ceres/: program.cc
example/: example.py
example/output/: final.ply  initial.ply
main/: config.py  objects.py
tracker/: config.py  example.py  logger.py  objects.py  test.py
